# showerthoughts

./: .gitignore  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  main.c  showerthoughts.c
.github/workflows/: ccpp.yml  release.yml
